<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_two"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/albumCover"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/albumCover"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground" />



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="109dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/musicTitle"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:gravity="center_horizontal"
                    android:text="@string/musicTitle"
                    android:textColor="@color/black"
                    android:textSize="15sp"

                    android:textStyle="normal" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnPlay"
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:background="#FFFFFF"
                        android:contentDescription="@string/playButton"
                        app:srcCompat="@drawable/play_arrow_24px"
                        tools:srcCompat="@drawable/play_arrow_24px" />

                    <ImageButton
                        android:id="@+id/btnPause"
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/white"
                        android:contentDescription="@string/pauseButton"
                        app:srcCompat="@drawable/stop_24px"
                        tools:srcCompat="@drawable/stop_24px" />

                    <ImageButton
                        android:visibility="gone"
                        android:id="@+id/btnFavorite"
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_marginStart="8dp"
                        android:background="@color/off_white"
                        android:backgroundTint="#FFFFFF"
                        android:contentDescription="@string/addToFavorite"
                        app:srcCompat="@drawable/star_24px"
                        tools:srcCompat="@drawable/star_24px" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>